Added function to compute plots for the presentation
git-svn-id: https://svn.id.ethz.ch/eoethz/trunk/bafsimon/trunk/Bisgletscher_pol@2822 7821f091-807e-4826-bf48-bc026ed4e502

--- a/doc/stack_model.tex
+++ b/doc/stack_model.tex
@@ -104,6 +104,6 @@ The Kalman filter can be used to obtain posterior estimates of the displacement 
 	\state{\mathbf{P}}{i}{i} = \left(\mathbf{I} - \mathbf{K}_i\mathbf{H}^{stack}\right)\state{\mathbf{P}}{i}{i-1}
 	\end{equation}
 \end{itemize}
-Using this method, a new SLC image can be used to estimate updated displacement model parameter "online" using the previously estimated parameter and the stack formed using \autoref{eq:stack}.
+With this method, a new SLC image can be used to estimate updated displacement model parameter "online" using the previously estimated parameters and the stack formed with \autoref{eq:stack}.
 
 \end{document}
