--- a/doc/stack_model.tex
+++ b/doc/stack_model.tex
@@ -1,10 +1,8 @@
 \documentclass{article}
 \usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{../../Texts/macros}
 
-\newcommand\state[3]{{#1}_{#2\vert#3}}
-
-\newcommand\posterior[2]{\state{#1}{#2}{#2}}
 
 \title{Linear Systems to Describe Interferogram Stacks}
 
@@ -12,22 +10,28 @@
 
 \begin{document}
 \maketitle
-\section{Latent Linear Dynamical System Model}\label{sec:displacement_model}
-Consider a generic point moving on an unstable slope according to the general linear dynamic system (LDS):
+
+\section{Methods}
+\subsection{Latent Linear Dynamical System Model }\label{sec:displacement_model}
+\subsubsection{General Model Definition}
+Consider the general time-discrete Latent Linear Dynamical System (LDS)\cite{Barber2011}:
 \begin{equation}\label{eq:state_recursion}
-	\mathbf{x}_t = \mathbf{F}_t \mathbf{x}_{t-1}
+	\begin{aligned}
+		\mathbf{x}_t &= \mathbf{F}_t \mathbf{x}_{t-1} + \mathbf{w}_t \quad \mathbf{w}_t \sim \normdist{0}{\mathbf{Q_t}} \\
+		\mathbf{y}_{t} &= \mathbf{H}_{t}  \mathbf{x}_{t} + \mathbf{v}_t \quad \mathbf{v}_t   \sim \normdist{0}{\mathbf{R}_t}
+	\end{aligned}
 \end{equation}
-where the state variable $\mathbf{x}_t$ contains the model parameters, i.e displacement, velocity, acceleration at every time step $t$. $\mathbf{F}_t$ describes the evolution of the parameters; we allow it to vary with time. For an uniform motion, the LDS description is:
-\begin{equation}
+that describes the evolution of the hidden state $\mathbf{x_t}$ of a stochastic linear dynamical system, of which we observe $\mathbf{y}_t$, a transformed version of the hidden state corrupted by zero mean additive Gaussian noise with covariance matrix $\mathbf{R}_t$.\\
+For example, for an uniform linear motion the state vector $\mathbf{x}_t$ would consist of position and velocity at each time $t$:
+\begin{equation}\label{eq:simplified_state}
 \mathbf{x}_t = 
 	\begin{bmatrix}
 		d_{t}\\
 		v_{t}
 	\end{bmatrix}
 \end{equation}
-where $d_t$ is the distance from the point to a (non-moving) reference point and $v_t$ is the velocity of the motion.
-In this situation, the state evolves from $t-1$ to $t$ as:
-\begin{equation}
+where $d_t$ is the distance from the point to a (non-moving) reference point and $v_t$ is the velocity of the motion. $\mathbf{F}_t$ describes the evolution of the parameters from $t$ to $t+1$: 
+\begin{equation}\label{eq:simplified_F}
 	\mathbf{x}_t = 
 		\begin{bmatrix}
 			d_{t}\\
@@ -43,8 +47,9 @@ In this situation, the state evolves from $t-1$ to $t$ as:
 		\end{bmatrix}.
 \end{equation}
 Where $\Delta t$ is the duration of the time step between $t-1$ and $t$.\\
-\subsection{Single Interferogram}
-Suppose we now want to apply this type of model to interferometric SAR acquisitions of a scene with moving features. We start simplistically by considering the SLC phase $\phi_t$ at each pixel, which is proportional to $r_t$, the distance between the pixel and the sensor modulo $2 \pi$:
+\subsubsection{Modeling a Single Interferogram}
+The Latent LDS will be used as a simplified model to describe terrain deformation as observed by differential radar interferometry. The latent state $\mathbf{x}_t$ is assumed to contain the line-of-sight velocity and displacement w.r.t  the reference point for any feature of interest on the terrain, represented in the radar geometry.\\ Assuming an uniform linear model, the state transition is described by the $\mathbf{F}$ matrix of \autoref{eq:simplified_F}. For the moment, no assumptions are made regarding the covariance matrix $\mathbf{Q}_t$.\\
+Under this very simplistic model, the SLC phase $\phi_t$ at each pixel at time $t$ is proportional to $r_t$, the distance between the pixel and the sensor modulo $2 \pi$:
 \begin{equation}
 	\phi_t = \frac{4\pi}{\lambda} r_t + 2 \pi n.
 \end{equation}
@@ -52,15 +57,27 @@ Using the distance between radar and reference point, $r_t^{ref}$, $r_t$ can be 
 \begin{equation}
 	r_t = r_t^{ref} + d_t.
 \end{equation}
-Thus, the SLC phase can be expressed as the output of the LDS in \autoref{eq:state_recursion}:
+Thus, the SLC phase can be expressed as:
 \begin{equation}
-	\phi_t = \frac{4\pi}{\lambda} \left(
+	\begin{aligned}
+	\phi_t  &= \frac{4\pi}{\lambda} \left(
 		\begin{bmatrix}
 			1 & 0
 		\end{bmatrix} \mathbf{x}_{t}
 		+  r_t^{ref}
-		\right) + 2 \pi n.
+		\right) + 2 \pi n\\
+		 &= \left(\mathbf{H}_{t}\mathbf{x}_t + \mathbf{u}_t\right) + 2 \pi n
+	\end{aligned}		
 \end{equation}
+That is the output of the LDS plus an additional offset vector
+\begin{equation}
+	\mathbf{u}_t = 
+	\begin{bmatrix}
+		r_{t}\\
+		0
+	\end{bmatrix},
+\end{equation}	 modulo $2\pi$.
+Where we used $\mathbf{y}_{t}$ to be consistent with the usual LDS notation for the systems output.\\
 Normally, instead of directly considering the SLC phase, interferograms are formed between acquisitions at times $t_i$ and $t_j$. By doing so, all systematic effects are removed; theoretically the interferograms phase $\Delta\phi_{t_i,t_j}$ is proportional to the change in distance from the point to the radar between acquisition $t_i$ and $t_j$ modulo $2\pi$:
 \begin{equation}
 	\Delta\phi_{t_i,t_j} =  \frac{4\pi}{\lambda} \left(r_{t_j} - r_{t_i}\right) + 2 \pi n
